apps/core/static/scss/_header.scss
.header {
    width: 100%;

    position: fixed;
    top: 0;
    z-index: 3;

    a,
    button {
        color: inherit;

        transition: color $transition-duration;

        &:focus,
        &:hover {
            color: inherit;
            text-decoration: underline;
        }
    }
}

.header--past-intro {
    a,
    button {
        color: $body-color;

        &:focus,
        &:hover {
            color: $body-color;
        }
    }
}

.header__link {
    text-decoration: none;
    font-size: 1.8rem;
    text-align: center;
    padding: 0.25em 0.5em;

    @include media-breakpoint-up(md) {
        text-align: left;
        font-size: inherit;
        padding: 0.5em 1em;
    }
}

a.header__brand {
    text-decoration: none;
    font-size: inherit;
    padding: 0;

    @include media-breakpoint-up(md) {
        position: absolute;
        top: 1em;
        left: 1.7em;
        z-index: 1;
    }

    &:hover,
    &:focus {
        text-decoration: none;
    }
}

.header__brand-label {
    height: 0.95em;
    display: none;

    @include media-breakpoint-down(sm) {
        margin-top: 0.6em;
    }
}

.homepage .header__brand-label {
    // only show on homepage
    display: inline-block;
}

.homepage .header__menu {
    transition: opacity 1s;
    opacity: 0;
}

.header__brand-canvas {
    position: absolute;
    left: 0;
    height: 50px;
    width: 60px;
    margin-top: -$spacer;

    vertical-align: top;
}

.header__menu {
    justify-content: center;

    @include media-breakpoint-down(sm) {
        &:after {
            content: "";
            display: block;

            position: fixed;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            z-index: -1;

            background: rgba($body-bg, 0.9);
        }
    }
}

.header__menu-list {
    height: 85vh;
    justify-content: center;

    transition: opacity $transition-duration;

    @include media-breakpoint-up(md) {
        height: auto;

        &:after {
            content: "";
            display: block;
            height: 6em;

            position: absolute;
            left: 0;
            right: 0;
            top: 0;
            z-index: -1;
            background: linear-gradient(rgba($body-bg, 1) 0%, rgba($body-bg, 0.5) 60%, rgba($body-bg, 0) 100%);
        }
    }
}

.project-page .header__menu-list:after {
    content: none;
}

.header__menu-list--invisible {
    opacity: 0;
}

.header__bar-icon {
    display: block;
    width: 0.9em;
    height: 1px;
    margin-bottom: 0.25em;

    background-color: $black;

    transform-origin: 50% 50%;
    transition: transform $transition-duration, opacity $transition-duration;
}

button.header__bar__toggle {
    margin-top: 0.3em;

    position: absolute;
    right: $spacer - $navbar-toggler-padding-x;
    top: $spacer - $navbar-toggler-padding-y;


    font-family: $font-family-monospace;
    text-transform: uppercase;
    font-size: 0.8rem;
    text-decoration: none;

    @include media-breakpoint-up(md) {
        position: static;
    }

    &:focus {
        text-decoration: none;
    }
}

.header__toggle-close {
    display: none;
}

.header__bar__toggle[aria-expanded="true"] {
    .header__toggle-open {
        display: none;
    }

    .header__toggle-close {
        display: block;
    }
}

